--- a/src/App.css
+++ b/src/App.css
@@ -4,21 +4,26 @@
 	font-family: sans-serif;
 	max-width: 900px;
 	margin: 0 auto;
+	display: flex;
+	flex-direction: column;
+	min-height: 100vh;
 }
-
+main {
+	flex: 1;
+	background-color: #eaecf1;
+	border: 1px solid #ccc;
+}
 .App-header,
 footer {
 	background-color: #282c34;
-	padding: 7px;
+	padding: 7px 20px;
 	color: white;
 }
 
 .form-container,
 .image-comparison-container,
 .thank-you-container {
-	border: 1px solid #ccc;
 	padding: 20px;
-	background-color: #f9f9f9;
 }
 
 .form-container div {
@@ -159,6 +164,7 @@ form > div > input {
 	max-width: 40px;
 	margin-left: 0;
 	font-size: large;
+	outline: 1px solid #888;
 }
 input[type="number"]::-webkit-inner-spin-button,
 input[type="number"]::-webkit-outer-spin-button {
