--- a/src/App.css
+++ b/src/App.css
@@ -54,6 +54,7 @@ button {
 	cursor: pointer;
 	font-size: 16px;
 	margin-top: 10px;
+	box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.1);
 }
 
 button:hover {
@@ -211,6 +212,7 @@ footer > p {
 	font-style: italic;
 	font-size: smaller;
 	opacity: 0.8;
+	will-change: grid-template-rows;
 	transition: 0.2s grid-template-rows ease;
 }
 .ratingDesc > div {
@@ -221,4 +223,18 @@ ul {
 }
 ul > li {
 	margin-bottom: 0.8em;
+}
+.buttonFlex {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-around;
+	align-items: flex-start;
+	gap: 10px;
+	max-width: 400px;
+	margin: auto;
+	margin-top: 24px;
+}
+.buttonFlex > button {
+	margin-top: 0;
+	padding: 10px 25px;
 }
