--- a/src/App.css
+++ b/src/App.css
@@ -46,6 +46,7 @@ footer {
 }
 
 button {
+	will-change: background-color;
 	background-color: #007bff;
 	color: white;
 	padding: 10px 20px;
@@ -55,6 +56,7 @@ button {
 	font-size: 16px;
 	margin-top: 10px;
 	box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.1);
+	transition: 0.1s background-color ease;
 }
 
 button:hover {
@@ -62,8 +64,9 @@ button:hover {
 }
 
 button:disabled {
-	background-color: #ccc;
+	background-color: #d4d5df;
 	cursor: not-allowed;
+	opacity: 0.8;
 }
 
 .images-display {
